# Pytition

./: .env.example  .gitignore  .pdm-python  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Jenkinsfile  LICENSE  README  README.md  conftest.py  docker-compose.yml  project_tree.txt  pyproject.toml  pytest.ini  readthedocs_requirements.txt  requirements.txt  requirements_dev.txt
.github/: FUNDING.yml
dev/: CONTRIBUTE.md  INSTALL.md  dev_setup.sh  generate_docker_config.sh  initialize.sh  prepopulate.sh
doc/: advance_install.rst  conf.py  configuration.rst  index.rst  installation.rst  multi-domain-install.rst  update.rst
doc/_ext/: djangodocs.py
nginx-uwsgi/: Dockerfile_uwsgi  README.md  docker-compose.yml  nginx.conf  start_pytition.sh  uwsgi.ini
profiling/: .gitignore  README.md  benchmark.py  run_profiler.py
profiling/results/: .gitkeep
pytition/: cli_pytition.py  manage.py  testdb.sqlite3
pytition/locale/: django.pot
pytition/locale/ar/LC_MESSAGES/: django.po
pytition/locale/ca/LC_MESSAGES/: django.po
pytition/locale/da/LC_MESSAGES/: django.po
pytition/locale/de/LC_MESSAGES/: django.po
pytition/locale/es/LC_MESSAGES/: django.po
pytition/locale/eu/LC_MESSAGES/: django.po
pytition/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
pytition/locale/gl/LC_MESSAGES/: django.po
pytition/locale/hu/LC_MESSAGES/: django.po
pytition/petition/: admin.py  apps.py  forms.py  helpers.py  models.py  urls.py  views.py  widgets.py
pytition/petition/migrations/: 0001_initial.py  0001_squashed_0002_petition_org_twitter_handle.py  0002_auto_20170929_0148.py  0002_auto_20180308_1725.py  0003_auto_20171008_1718.py  0003_auto_20180308_1728.py  0004_auto_20180804_0002.py  0004_petition_target.py  0005_auto_20171008_2234.py  0005_auto_20180911_1857.py  0006_auto_20171009_1543.py  0006_auto_20180924_1738.py  0006_auto_20181015_0851.py  0007_auto_20171009_1558.py  0007_auto_20180924_1738.py  0007_auto_20180924_1738_squashed_0029_auto_20181031_1720.py  0007_auto_20180924_1739.py  0007_auto_20190807_2221.py  0008_auto_20171009_1604.py  0008_auto_20180924_1739.py  0008_auto_20180925_1057.py  0008_auto_20181114_0823.py  0008_auto_20190922_1805.py  0009_auto_20171010_1710.py  0009_auto_20180925_1057.py  0009_auto_20181007_1620.py  0009_auto_20181120_0821.py  0009_auto_20200210_0948.py  0010_auto_20181007_1620.py  0010_auto_20200902_1853.py  0010_permission_can_modify_permissions.py  0010_petition_mobile_background.py  0011_auto_20171010_1731.py  0011_auto_20181201_0914.py  0011_auto_20210524_2151.py  0011_pytitionuser_invitations.py  0012_auto_20171010_1733.py  0012_auto_20181022_2127.py  0012_auto_20181201_0918.py  0012_pytitionuser_moderated.py  (+99 more)
pytition/petition/spam_management/: detector.py  utils.py
pytition/petition/static/: eaAJAX.js  eaCommon.js  eacampaign.js  ensharing.css  petition.css  typeahead.css  typeahead.js
pytition/petition/templates/: 503.html
pytition/petition/templatetags/: petition_extras.py
pytition/petition/tests/: test_Commands.py  tests_AccountSettingsView.py  tests_AddSlugView.py  tests_AllPetitions.py  tests_Confirm.py  tests_CoverageImprovement.py  tests_CreateSignatureView.py  tests_DelSlugView.py  tests_Detail.py  tests_EditPetitionView.py  tests_GetCsvSignatureView.py  tests_GetUserListView.py  tests_GoSendConfirmationEmailView.py  tests_Indexviews.py  tests_InviteAcceptView.py  tests_InviteDismissView.py  tests_LeaveOrg.py  tests_MocksStubsFakes.py  tests_OrgAddUserView.py  tests_OrgCreateView.py  tests_OrgDashboardView.py  tests_OrgDeleteMemberView.py  tests_OrgEditUserPermsView.py  tests_OrgProfileView.py  tests_OrgSetUserPermsView.py  tests_Organization.py  tests_Permission.py  tests_Petition.py  tests_PetitionCreationWizard.py  tests_PetitionDetailView.py  tests_PetitionTemplate.py  tests_PetitionTemplateViews.py  tests_PetitionTransfer.py  tests_PetitionViews.py  tests_PytitionUser.py  tests_RegisterView.py  tests_Search.py  tests_ShowSympaSubscribeBlocView.py  tests_Signature.py  tests_SignatureViews.py  (+5 more)
pytition/pytition/: __init__.py  settings.py  urls.py  wsgi.py
pytition/pytition/settings/: base.py  config_example.py  pgsql.py  test.py
(+134 files in other folders)
