[project]
name = "Pytition"
version = "2.9"
description = "Django app for self-hosted privacy-friendly online petitions"
authors = [
    {name = "Yann Sionneau", email = "yann@sionneau.net"},
]
dependencies = [
    "alt-profanity-check==1.3.2",
    "Django~=5.2.0",
    "django-colorfield==0.10.1",
    "django-tinymce==5.0.0",
    "django-mailer==2.3",
    "django-maintenance-mode",
    "django-phonenumber-field[phonenumbers]==6.3.0",
    "requests~=2.0",
    "django-widget-tweaks==1.4.3",
    "beautifulsoup4~=4.6.3",
    "django-formtools==2.2",
    "bcrypt",
    "lxml[html_clean]",
    "matplotlib==3.7.5",
    "akismet~=25.10.1",
    "setuptools>=75.3.2",
    "uwsgi",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSD 3-Clause"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "coverage==4.5.2",
    "sphinx",
    "sphinx-rtd-theme"
]
